--- a/betterthanfb.html
+++ b/betterthanfb.html
@@ -6,10 +6,8 @@
     <meta name="keyword" content="Bikarçılıq yoxsa bekarçılıq?">
     <title>Bekraçılıq</title>
     <meta name="viewpoint" content="width=device-width, inital-scale=1.0">
-    <meta name="description" content="Bekarsızsa burdanısınızdır">
+    <meta name="description" content="there is no description here">
     <meta name="author" content="Emil Taciyev">
-
-    <link rel="shortcut icon" href="ko2.png">
 
 
 </head>
